<resources>
    <string name="app_name">OldMusa</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="channel_name" translatable="false">alarm</string>
    <string name="channel_description">Alarm channel</string>
    <string name="dash">-</string>
    <string name="current_date">Showing date %s</string>
    <string name="change_date">Change date</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_manage_users">Manage Users</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_current_user_detail">User</string>

    <string name="username">Username</string>
    <string name="permission">Permission</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="change_site_access">Change Site Access</string>
    <string name="delete_user">Delete user</string>
    <string name="about">About</string>

    <string name="noSensorFound">No sensor found</string>
    <string name="noSiteFound">No site found</string>
    <string name="noChannelFound">No channel found</string>
    <string name="tryAddingOne">Try adding one</string>
    <string name="no_image_found">No image found</string>
    <string name="delete_user_dialog_title">Delete the user?</string>
    <string name="delete_user_dialog_message">This is a destructive operation, the user data cannot be recovered</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>

</resources>
