<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/current_user_detail"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_current_user_detail" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit_to_app"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/manage_users"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_manage_users" />
    <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

</menu>